infra/k8s/ngrok-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
    - host: $NGROK_DOMAIN
      http:
        paths:
          - path: /autohub
            pathType: Prefix
            backend:
              service:
                name: autohub-server
                port:
                  number: 80
